log/build_2024-12-07_04-30-45/serial_ctrl/stdout_stderr.log
running egg_info
writing ../../build/serial_ctrl/serial_ctrl.egg-info/PKG-INFO
writing dependency_links to ../../build/serial_ctrl/serial_ctrl.egg-info/dependency_links.txt
writing entry points to ../../build/serial_ctrl/serial_ctrl.egg-info/entry_points.txt
writing requirements to ../../build/serial_ctrl/serial_ctrl.egg-info/requires.txt
writing top-level names to ../../build/serial_ctrl/serial_ctrl.egg-info/top_level.txt
reading manifest file '../../build/serial_ctrl/serial_ctrl.egg-info/SOURCES.txt'
writing manifest file '../../build/serial_ctrl/serial_ctrl.egg-info/SOURCES.txt'
running build
running build_py
copying serial_ctrl/serial_ctrl_py.py -> /home/bingflame/RoArm-M1/build/serial_ctrl/build/lib/serial_ctrl
running install
running install_lib
copying /home/bingflame/RoArm-M1/build/serial_ctrl/build/lib/serial_ctrl/serial_ctrl_py.py -> /home/bingflame/RoArm-M1/install/serial_ctrl/lib/python3.10/site-packages/serial_ctrl
byte-compiling /home/bingflame/RoArm-M1/install/serial_ctrl/lib/python3.10/site-packages/serial_ctrl/serial_ctrl_py.py to serial_ctrl_py.cpython-310.pyc
  File "/home/bingflame/RoArm-M1/install/serial_ctrl/lib/python3.10/site-packages/serial_ctrl/serial_ctrl_py.py", line 27
    // 创建发布者，发布 std_msgs::msg::String 类型的消息
            ^
SyntaxError: invalid character '，' (U+FF0C)

running install_data
running install_egg_info
removing '/home/bingflame/RoArm-M1/install/serial_ctrl/lib/python3.10/site-packages/serial_ctrl-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/serial_ctrl/serial_ctrl.egg-info to /home/bingflame/RoArm-M1/install/serial_ctrl/lib/python3.10/site-packages/serial_ctrl-0.0.0-py3.10.egg-info
running install_scripts
Installing serial_ctrl script to /home/bingflame/RoArm-M1/install/serial_ctrl/lib/serial_ctrl
writing list of installed files to '/home/bingflame/RoArm-M1/build/serial_ctrl/install.log'
